--- a/src/app/scheduler/scheduler.component.scss
+++ b/src/app/scheduler/scheduler.component.scss
@@ -57,6 +57,10 @@
     transform: translateX(0);
 }
 
+::ng-deep .ok {
+  display: none;
+}
+
 //desktop
 @media (min-width: 576px) {
     .mainContainerPresent {
