--- a/src/app/scheduler/scheduler.component.html
+++ b/src/app/scheduler/scheduler.component.html
@@ -12,7 +12,7 @@
        
 
         <angular2-date-picker  (onDateSelect)="onDateSelect($event)"  style="    width: 250px; 
-        margin-left: 30px;" [(ngModel)]="date" [settings]="settings"></angular2-date-picker>
+        margin-left: 30px;" [(ngModel)]="date" [settings]="settings" ngDefaultControl></angular2-date-picker>
         <!-- <div>
             <mat-form-field appearance="fill" class="example-form-field">
                 <mat-label>Choose a date</mat-label>
