--- a/src/app/scheduler/scheduler.component.scss
+++ b/src/app/scheduler/scheduler.component.scss
@@ -30,6 +30,20 @@
     }
 }
 
+.formFieldValidationAlert {
+    background-color: white;
+    border: solid 3px darkgray;
+    width: 448px;
+    z-index: 1;
+    height: 714px;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -53%);
+    border-radius: 3px;
+}
+
 .imagePresentar {
     border: solid 5px darkgrey;
     width: 948px;
@@ -88,22 +102,22 @@
 
 /* Track */
 ::ng-deep .timePickerclass::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
 }
 
 /* Handle */
 ::ng-deep .timePickerclass::-webkit-scrollbar-thumb {
-    background: #1564bf; 
+    background: #1564bf;
     border-radius: 10px;
 }
 
 /* Handle on hover */
 ::ng-deep .timePickerclass::-webkit-scrollbar-thumb:hover {
-    background: #1564bf; 
+    background: #1564bf;
 }
 
-.pesonalInfoClass{
+.pesonalInfoClass {
     height: 350px;
 }
 
@@ -120,19 +134,19 @@
 
 /* Track */
 ::ng-deep .pesonalInfoClass::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px grey;
     border-radius: 10px;
 }
 
 /* Handle */
 ::ng-deep .pesonalInfoClass::-webkit-scrollbar-thumb {
-    background: #1564bf; 
+    background: #1564bf;
     border-radius: 10px;
 }
 
 /* Handle on hover */
 ::ng-deep .pesonalInfoClass::-webkit-scrollbar-thumb:hover {
-    background: #1564bf; 
+    background: #1564bf;
 }
 
 //desktop
