--- a/src/app/scheduler/scheduler.component.html
+++ b/src/app/scheduler/scheduler.component.html
@@ -245,7 +245,7 @@
         </mat-tab-group>
 
         <div style="padding-top: 10px;">
-            <button *ngIf="!isNextTab" mat-button color="primary" (click)="previousStep()" (click)="_openCalendar(theTimePicker)"
+            <button *ngIf="!isNextTab" mat-button color="primary" (click)="previousStep()" 
                 [disabled]="desablePrevioustButton">
                 Previous
             </button>
