--- a/src/app/scheduler/scheduler.component.scss
+++ b/src/app/scheduler/scheduler.component.scss
@@ -89,6 +89,10 @@
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
     overflow-y: scroll;
     max-height: 300px;
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    width: 225px;
 }
 
 ::ng-deep .timePickerclass::-webkit-scrollbar {
