--- a/src/app/restaurant/restaurant.component.html
+++ b/src/app/restaurant/restaurant.component.html
@@ -1,1 +1,50 @@
-<p>restaurant works!</p>
+<div class="mainContainer">
+
+    <div class="header">
+        <img class="logo" src="./assets/img/bmxLogo.png">
+        <h1>Luna Rosa</h1>
+    </div>
+
+    <div class="menu">
+
+
+        <div style="width:400px; height:200px;">
+
+            <div class="foodCard" *ngFor="let item of food; index as i">
+                <h1 class="title secondary-text">{{item.name}}</h1>
+                <div class="title secondary-text">{{item.description}}</div>
+                <div class="row">
+                    <button mat-raised-button color="primary" style="color: black;outline: none; margin: 10px; color: white;">
+                        options
+                      </button> 
+                    <button mat-raised-button color="accent" style="color: black;outline: none; margin: 10px; color: white;">
+                        toppings
+                      </button> 
+                    <button mat-icon-button color="accent" style="color: black;outline: none;">
+                        <mat-icon>remove_circle_outline</mat-icon>
+                      </button>    
+                      
+                      <button mat-icon-button color="primary" (click)="addToCart(i)" style="color: black;outline: none;">
+                        <mat-icon>add_circle_outline</mat-icon>
+                      </button>    
+                      <button mat-icon-button color="primary" (click)="addToCart(i)" style="color: black;outline: none;font-size: 30px;">
+                       {{item.orderQuantity}}
+                      </button>    
+                </div>
+
+            </div>
+            <br>
+            <br>
+        </div>
+
+
+        <div style="width:300px; height:200px"></div>
+        <div style="width:300px; height:200px"></div>
+
+        <div class="footer">
+            <button mat-fab color="primary" style="color: white;">
+                <mat-icon>shopping_cart</mat-icon>
+              </button>        
+        </div>
+    </div>
+</div>
