--- a/src/app/restaurant/restaurant.component.scss
+++ b/src/app/restaurant/restaurant.component.scss
@@ -30,100 +30,10 @@
     }
 }
 
-.mainContainer {
-    display: flex;
-    flex-direction: column;
-    height: 90vh;
-    width: 500px;
-    max-width: 500px;
-    justify-content: space-between;
-    align-items: center;
-    border: black solid 5px;
-    border-radius: 10px;
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -53%);
-    transform: translate(-50%, -53%);
-    @include BoxShadow(6);
-
-    .logo {
-        width: 80px;
-    }
-    .header {
-        width: 100%;
-
-        height: 120px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        position: fixed;
-        top: 0px;
-        background-color: white;
-        z-index: 1;
-    }
-
-    .footer {
-        width: 100%;
-        height: 75px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        position: fixed;
-        bottom: 0px;
-        background-color: white;
-        z-index: 1;
-        border: 1px solid black;
-    }
-
-    .boton {
-        width: 100px;
-        margin: 5px;
-        color: white;
-        width: 100px;
-        // margin: 10px;
-        color: white;
-        font-size: 30px;
-    }
-
-    .menu {
-        overflow-y: scroll;
-        width: 100%;
-        height: 90%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin-top: 20px;
-    }
-
-    .foodCard {      
-        display: flex;
-        flex-direction: column;
-        border: gray solid 1px;
-        border-radius: 5px;
-        justify-content: space-between;
-        align-items: center;
-        margin: 10px;      
-    }
-
-    .row {      
-        display: flex;
-        flex-direction: row;
-        // border: gray solid 1px;
-        // border-radius: 5px;
-        justify-content: space-between;
-        align-items: center;
-        margin: 10px;      
-    }
-}
-
 /* width */
 ::ng-deep .menu::-webkit-scrollbar {
     width: 5px;
+    display: none;
 }
 
 /* Track */
@@ -141,4 +51,219 @@
 /* Handle on hover */
 ::ng-deep .menu::-webkit-scrollbar-thumb:hover {
     background: #1564bf;
+}
+
+//desktop
+@media (min-width: 576px) {
+    .mainContainer {
+        display: flex;
+        flex-direction: column;
+        height: 90vh;
+        width: 500px;
+        max-width: 500px;
+        justify-content: space-between;
+        align-items: center;
+        border: black solid 5px;
+        border-radius: 10px;
+
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -53%);
+        transform: translate(-50%, -53%);
+        @include BoxShadow(6);
+
+        .logo {
+            width: 80px;
+        }
+        .header {
+            width: 100%;
+            height: 110px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            position: fixed;
+            top: 0px;
+            background-color: white;
+            z-index: 1;
+        }
+
+        .footer {
+            width: 100%;
+            height: 41px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            position: fixed;
+            bottom: 0px;
+            background-color: white;
+            z-index: 1;
+            border: 1px solid #004684;
+        }
+
+        .boton {
+            width: 100px;
+            margin: 5px;
+            color: white;
+            width: 100px;
+            // margin: 10px;
+            color: white;
+            font-size: 30px;
+        }
+
+        .menu {
+            overflow-y: scroll;
+            width: 100%;
+            height: 90%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .foodCard {
+            display: flex;
+            flex-direction: column;
+            border: gray solid 1px;
+            border-radius: 5px;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px;
+        }
+
+        .row {
+            display: flex;
+            flex-direction: row;
+            // border: gray solid 1px;
+            // border-radius: 5px;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px;
+        }
+    }
+    .formFieldValidationAlert {
+        background-color: white;
+        border: solid 3px darkgray;
+        width: 448px;
+        z-index: 1;
+        height: 714px;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -53%);
+        border-radius: 3px;
+    }
+}
+//mobile
+@media (max-width: 576px) {
+    .mainContainer {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        width: 500px;
+        max-width: 500px;
+        justify-content: space-between;
+        align-items: center;
+        // border: black solid 5px;
+        // border-radius: 10px;
+
+        position: absolute;
+        top: 53%;
+        left: 50%;
+        -ms-transform: translate(-50%, -53%);
+        transform: translate(-50%, -53%);
+        @include BoxShadow(6);
+
+        .logo {
+            width: 80px;
+        }
+        .header {
+            width: 100%;
+
+            height: 100px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            position: fixed;
+            top: 0px;
+            background-color: white;
+            z-index: 1;
+        }
+
+        .footer {
+            width: 100%;
+            height: 41px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            align-items: center;
+            position: fixed;
+            bottom: 0px;
+            background-color: white;
+            z-index: 1;
+            border-top: 3px solid #004684;
+        }
+
+        .boton {
+            width: 100px;
+            margin: 5px;
+            color: white;
+            width: 100px;
+            // margin: 10px;
+            color: white;
+            font-size: 30px;
+        }
+
+        .menu {
+            overflow-y: scroll;
+            width: 100%;
+            height: 110%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin: 20px;
+        }
+
+        .foodCard {
+            display: flex;
+            flex-direction: column;
+            border: gray solid 1px;
+            border-radius: 5px;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px;
+        }
+
+        .row {
+            display: flex;
+            flex-direction: row;
+            // border: gray solid 1px;
+            // border-radius: 5px;
+            justify-content: space-between;
+            align-items: center;
+            margin: 10px;
+        }
+    }
+    .formFieldValidationAlert {
+        background-color: white;
+        border: solid 3px darkgray;
+        width: 448px;
+        z-index: 1;
+        height: 714px;
+        margin: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -53%);
+        border-radius: 3px;
+    }
+}
+// small mobile
+@media (max-width: 400px) {
 }
